--- a/3.1-portal-editor.md
+++ b/3.1-portal-editor.md
@@ -1,9 +1,9 @@
 ---
-title: Portal Editor
-parent: Persistent AR
+title: Installation und Einrichtung
+parent: Portal Editor
 nav_order: 1
 ---
 
-# Portal Editor
+# Installation und Einrichtung
 
-Der Portal Editor ist eine separate Companion-App, das Repository befindet sich hier:
+Der Portal Editor ist eine separate Companion-App, das Repository befindet sich hier: [LINK]
