--- a/3.1-portal-editor-installation.md
+++ b/3.1-portal-editor-installation.md
@@ -5,6 +5,6 @@ grand_parent: Übersicht
 nav_order: 1
 ---
 
-# Installation und Einrichtung
+# Portal Editor Installation und Einrichtung
 
 Der Portal Editor ist eine separate Companion-App, das Repository befindet sich hier: [LINK]
