--- a/1.2-installation.md
+++ b/1.2-installation.md
@@ -6,3 +6,14 @@ nav_order: 2
 ---
 
 # Spiel-App Installation und Einrichtung
+
+## Download
+
+Das Repository der Spiel-App befindet sich hier: [LINK]
+
+## Eintrag des Zugangs-Tokens
+
+Die App wird mit der Content Delivery API des Contentful CMS verbunden. Dazu werden __Space ID__ und __Content Delivery API Access Token__ aus dem Contentful Space (Settings > API keys > Content delivery/preview tokens) kopiert und im Xcode-Projekt in der Datei `ContentfulDataManager.swift` eingetragen:
+
+```client = Client(spaceId: "_____", accessToken: "_____")
+```
