--- a/2.2-einrichtung.md
+++ b/2.2-einrichtung.md
@@ -6,3 +6,11 @@ nav_order: 2
 ---
 
 # CMS Einrichtung
+
+## Einrichten eines Contentful Space
+
+## Einrichten des Contentful CLI
+
+## Importieren der Datenbank-Struktur
+
+## Einrichten der Zugangs-Tokens
