--- a/1.1-spielaufbau.md
+++ b/1.1-spielaufbau.md
@@ -81,6 +81,8 @@ Sobald die Worldmap gefunden wurde, wird zunächst das Portal platziert. Nach de
     - Titel (<a name="5.3-titel">5.3</a>)
     - Portalspezifische Story (<a name="5.4-portalspezifische-story">5.4</a>)
 
+![Session-Ablauf](/img/content-structure-5.png)
+
 Beim anschließenden Einsammeln der Objekte erscheint die Objektbeschreibung fürs Sammelalbum (5.5, 5.6, 5.7), das Objekt (5.8) erhält ein Titel-Label (5.6).
 
 ![AR-Session Objektspezifische Story](/img/6_ar-session-3a.png) ![AR-Session Objekt](/img/6_ar-session-3b.png)
