--- a/2.3-hauptinhalte.md
+++ b/2.3-hauptinhalte.md
@@ -6,3 +6,49 @@ nav_order: 3
 ---
 
 # Museale Hauptinhalte
+
+Die musealen Inhalte konstituieren sich aus Einzelobjekten, die thematisch in Geschichten zusammengefasst und innerhalb dieser Geschichten an geografischen Orten (Portalen) gruppiert sind.
+
+![Objekte](/img/content-structure-1.png)
+
+Der Hauptinhalt des [CP 3: Objekt](2.1-cms-struktur.html#cp3-objekt) umfasst
+
+- Titel,
+- objektspezifische Story
+- Mediendatei.
+
+![Portale](/img/content-structure-2.png)
+
+Ein [CP 2: Portal](2.1-cms-struktur.html#cp2-portal) fasst mehrere Objekte zusammen.
+
+![Portalabfolge](/img/content-structure-3.png)
+
+Innerhalb einer Geschichte stehen die Portale in einer linearen Abfolge. Dazu enthält jedes Portal (bis auf das letzte) eine Verlinkung auf das jeweilige Folgeportal.
+
+Der Hauptinhalt des [CP 2: Portal](2.1-cms-struktur.html#cp2-portal) umfasst
+
+- Titel
+- portalspezifische Story
+- geografische Lage
+- enthaltene Objekte
+- Verlinkung auf Folgeportal.
+
+![Verlinkte Geschichte](/img/content-structure-4.png)
+
+Die linear erzählte [CP 1: Geschichte](2.1-cms-struktur.html#cp1-geschichte) fasst die Portale zusammen und bietet eine Einstiegsverlinkung.
+
+![Tourangebot](/img/content-structure-8.png)
+
+Im Spiel können mehrere Geschichten als Touren zur Auswahl angeboten werden. Für diese Tourauswahl bekommen die Geschichten ein Bild, einen kurzen Text und die Angabe einer ungefähren Tourlänge.
+
+Der Hauptinhalt der [CP 1: Geschichte](2.1-cms-struktur.html#cp1-geschichte) umfasst
+
+- Titel
+- Anmoderation
+- Abmoderation
+- enthaltene Portale
+- Einstiegsverlinkung
+- Bild für Tourauswahl
+- Text für Tourauswahl
+- Tourlänge
+- Tour-Farbe
