--- a/2.1-cms-struktur.md
+++ b/2.1-cms-struktur.md
@@ -107,7 +107,7 @@ Hiervon sollte nur ein singulärer Eintrag als Ausgangspunkt der Datenbank exist
 
 - Stiftende Organisation: [CP5: Institution](#cp5-institution)
 
-- Zum Teilen freigegeben: ja/nein
+- Zum Teilen freigegeben: [ja/nein](#extension-ja-nein)
     - Ausspielungen: [7.7](1.1-spielaufbau.html#7.7-zum-teilen-freigegeben)
 
 - Container Type: [Containertyp](#extension-containertyp)
@@ -145,11 +145,17 @@ Das Hinweisobjekt ist ein 2D-Objekt mit Vorder- und Rückseite, das frei bewegt 
     - Der nach Upload der Datei automatisch erzeugte Title-Eintrag des Contentful Media Assets (nicht des Wordmap Objekts) darf __nicht geändert__ werden
 
 
-## Weitere Content-Modelle und Erweiterungen
-
-
-
 ### Textobjekt
+
+- Text: Text
+
+- Phonetisch: Text _[ungenutzt]_
+
+## Contentful Extensions
+
+### Extension Ja/Nein
+
+(Standardmäßig Nein)
 
 ### Extension Linkobjekttyp
 
@@ -172,9 +178,6 @@ Das Hinweisobjekt ist ein 2D-Objekt mit Vorder- und Rückseite, das frei bewegt 
     - Film: erfordert Videodatei
     - Slide Projector: erfordert Bilddatei. Projektionsfläche sollte an einer physischen Wand platziert werden
     - Slide Projector with Screen: erfordert Bilddatei. Mit zusätzlicher Leinwand für Fälle, wenn keine physische Wand zur Verfügung steht
-
-
-
 
 ### Extension Fragmentzahl
 
