--- a/2.2-einrichtung.md
+++ b/2.2-einrichtung.md
@@ -7,10 +7,42 @@ nav_order: 2
 
 # CMS Einrichtung
 
-## Einrichten eines Contentful Space
+## Einrichten eines Contentful Accounts und eines Contentful Space
 
-## Einrichten des Contentful CLI
+Einrichtung eines Accounts und eines Workspace (Space), falls noch nicht vorhanden, wird [hier](https://www.contentful.com/help/contentful-101/#step-1-get-an-account) erklärt.
+
+__WICHTIG__: Die Default Locale des Space muss auf de-DE gestellt werden unter 
+
+## API-Key
+
+Der API-Key ist notwendig für den späteren Zugriff der mobilen Apps auf die reguläre und auf die Vorschau-Schnittstelle des CMS.
+
+- Die Spiel-App verwendet die reguläre Schnittstelle (Content Delivery API).
+- Die Portal Editor Companion App verwendet die Vorschau-Schnittstelle (Content Preview API).
+
+Der API-Key besteht aus der Space ID und jeweils einem Access-Token für die Content Delivery API und die Content Preview API.
+
+### Erzeugen des API-Key
+
+Falls im [Contentful Space](https://app.contentful.com) unter Settings > API keys > "Content delivery/preview tokens" noch kein Token existiert, oben rechts "Add API key" klicken.
+
+### Gespeicherten API-Key abrufen
+
+Der API-Key-Eintrag befindet sich im [Contentful Space](https://app.contentful.com) unter Settings > API keys > Content delivery/preview tokens.
+
+- Für die Spiel-App: Space ID und Content Delivery API access token kopieren
+- Für Portal Editor: Space ID und Content Preview API access token kopieren
 
 ## Importieren der Datenbank-Struktur
 
-## Einrichten der Zugangs-Tokens
+Das Datenbankschema der Content-Modelle kann als JSON-Datei importiert werden. Der Import erfolgt mit der [Contentful CLI](https://www.contentful.com/developers/docs/tutorials/cli/import-and-export/). Die JSON-Datei mit dem Datenbankschema befindet sich im Repository [LINK].
+
+## Einrichten der Extensions
+
+Für das CMS wurden mehrere Contentful Extensions entwickelt. Sie müssen neu angelegt werden. Die Vorlagen befinden sich im Repository [LINK].
+
+
+
+## Befüllung des CMS
+
+Die Befüllung des CMS erfolgt im Bereich __Content__ Bereich des Contentful Space.
