--- a/2.3-hauptinhalte.md
+++ b/2.3-hauptinhalte.md
@@ -15,11 +15,11 @@ Der Hauptinhalt des [CP 3: Objekt](2.1-cms-struktur.html#cp3-objekt) umfasst
 
 - Titel,
 - objektspezifische Story
-- Mediendatei.
+- Mediendatei
 
 ![Portale](/img/content-structure-2.png)
 
-Ein [CP 2: Portal](2.1-cms-struktur.html#cp2-portal) fasst mehrere Objekte zusammen.
+Ein [CP 2: Portal](2.1-cms-struktur.html#cp2-portal) fasst mehrere Objekte zusammen. Die geografische Lage ist inhaltlich relevant. Das Feld für Bemerkungen wird an die Portal Editor App ausgespielt und kann daher gut für zusätzliche Hilfsanweisungen genutzt werden, wie das Portal mit der Portal Editor App platziert werden soll.
 
 ![Portalabfolge](/img/content-structure-3.png)
 
@@ -31,7 +31,8 @@ Der Hauptinhalt des [CP 2: Portal](2.1-cms-struktur.html#cp2-portal) umfasst
 - portalspezifische Story
 - geografische Lage
 - enthaltene Objekte
-- Verlinkung auf Folgeportal.
+- Verlinkung auf Folgeportal
+- Bemerkungen
 
 ![Verlinkte Geschichte](/img/content-structure-4.png)
 
