--- a/2.1-cms-struktur.md
+++ b/2.1-cms-struktur.md
@@ -27,36 +27,36 @@ Hiervon sollte nur ein singulärer Eintrag als Ausgangspunkt der Datenbank exist
 
 ## CP1: Geschichte
 
-- Titel: Text
-    - Ausspielungen: [1.2](1.1-spielaufbau.html#1.2-titel); [2.1](1.1-spielaufbau.html#2.1-titel); [3.1](1.1-spielaufbau.html#3.1-titel); [6.2](1.1-spielaufbau.html#6.2-titel)
+### Titel: Text
+- Ausspielungen: [1.2](1.1-spielaufbau.html#1.2-titel); [2.1](1.1-spielaufbau.html#2.1-titel); [3.1](1.1-spielaufbau.html#3.1-titel); [6.2](1.1-spielaufbau.html#6.2-titel)
 
-- Anmoderation: [Textobjekt](#textobjekt)
-    - Ausspielungen: [2.2](1.1-spielaufbau.html#2.2-anmoderation); [6.3](1.1-spielaufbau.html#6.3-anmoderation)
+### Anmoderation: [Textobjekt](#textobjekt)
+- Ausspielungen: [2.2](1.1-spielaufbau.html#2.2-anmoderation); [6.3](1.1-spielaufbau.html#6.3-anmoderation)
 
-- Abmoderation: [Textobjekt](#textobjekt)
-    - Ausspielungen: Ende letzte AR-Session; [6.4](1.1-spielaufbau.html#6.4-abmoderation)
+### Abmoderation: [Textobjekt](#textobjekt)
+- Ausspielungen: Ende letzte AR-Session; [6.4](1.1-spielaufbau.html#6.4-abmoderation)
 
-- Portale: [CP 2: Portal](#cp2-portal) (mult.)
+### Portale: [CP 2: Portal](#cp2-portal) (mult.)
 
-- Einstiegs-Linkobjekttyp: [Linkobjekttyp](#extension-linkobjekttyp)
-    - bei Option "Hinweisobjekt" ist zusätzlich ein Hinweisobjekt zu definieren
-    - Ausspielungen: [2.3](1.1-spielaufbau.html#2.3-einstiegs-linkobjekttyp); [3.2](1.1-spielaufbau.html#3.2-linkobjekttyp)
+### Einstiegs-Linkobjekttyp: [Linkobjekttyp](#extension-linkobjekttyp)
+- bei Option "Hinweisobjekt" ist zusätzlich ein Hinweisobjekt zu definieren
+- Ausspielungen: [2.3](1.1-spielaufbau.html#2.3-einstiegs-linkobjekttyp); [3.2](1.1-spielaufbau.html#3.2-linkobjekttyp)
 
-- Einstiegs-Hinweisobjekt: [CP 4: Hinweisobjekt](#cp4-hinweisobjekt)
-    - anzugeben, wenn bei Einstiegs-Linkobjekttyp Option "Hinweisobjekt" eingestellt ist
-    - Ausspielungen: [4.1](1.1-spielaufbau.html#4.1-media)
+### Einstiegs-Hinweisobjekt: [CP 4: Hinweisobjekt](#cp4-hinweisobjekt)
+- anzugeben, wenn bei Einstiegs-Linkobjekttyp Option "Hinweisobjekt" eingestellt ist
+- Ausspielungen: [4.1](1.1-spielaufbau.html#4.1-media)
 
-- Bild für Tourauswahl: Contentful Media Asset
-    - Ausspielungen: [1.1](1.1-spielaufbau.html#1.1-bild-fuer-tourauswahl); [6.1](1.1-spielaufbau.html#heading-6.1-bild-fuer-tourauswahl)
+### Bild für Tourauswahl: Contentful Media Asset
+- Ausspielungen: [1.1](1.1-spielaufbau.html#1.1-bild-fuer-tourauswahl); [6.1](1.1-spielaufbau.html#heading-6.1-bild-fuer-tourauswahl)
 
-- Text für Tourauswahl: Text
-    - Ausspielungen: [1.3](1.1-spielaufbau.html#1.3-text-fuer-tourauswahl)
+### Text für Tourauswahl: Text
+- Ausspielungen: [1.3](1.1-spielaufbau.html#1.3-text-fuer-tourauswahl)
 
-- Tourlänge: Zahl
-    - ungefähre Angabe in Minuten
-    - Ausspielungen: [1.4](1.1-spielaufbau.html#1.4-tourlaenge)
+### Tourlänge: Zahl
+- ungefähre Angabe in Minuten
+- Ausspielungen: [1.4](1.1-spielaufbau.html#1.4-tourlaenge)
 
-- Farbe: [Tour-Farbe](#extension-tour-farbe)
+### Farbe: [Tour-Farbe](#extension-tour-farbe)
 
 
 ## CP2: Portal
