--- a/2.1-cms-struktur.md
+++ b/2.1-cms-struktur.md
@@ -28,33 +28,33 @@ Hiervon sollte nur ein singulärer Eintrag als Ausgangspunkt der Datenbank exist
 ## CP1: Geschichte
 
 ### Titel: Text
-- Ausspielungen: [1.2](1.1-spielaufbau.html#1.2-titel); [2.1](1.1-spielaufbau.html#2.1-titel); [3.1](1.1-spielaufbau.html#3.1-titel); [6.2](1.1-spielaufbau.html#6.2-titel)
+- Ausspielungen: [1.2](1.1-spielaufbau.html#tourauswahl); [2.1](1.1-spielaufbau.html#ar-session-tourbeginn); [3.1](1.1-spielaufbau.html#spielplan); [6.2](1.1-spielaufbau.html#sammelalbum)
 
 ### Anmoderation: [Textobjekt](#textobjekt)
-- Ausspielungen: [2.2](1.1-spielaufbau.html#2.2-anmoderation); [6.3](1.1-spielaufbau.html#6.3-anmoderation)
+- Ausspielungen: [2.2](1.1-spielaufbau.html#ar-session-tourbeginn); [6.3](1.1-spielaufbau.html#sammelalbum)
 
 ### Abmoderation: [Textobjekt](#textobjekt)
-- Ausspielungen: Ende letzte AR-Session; [6.4](1.1-spielaufbau.html#6.4-abmoderation)
+- Ausspielungen: Ende letzte AR-Session; [6.4](1.1-spielaufbau.html#sammelalbum)
 
 ### Portale: [CP 2: Portal](#cp2-portal) (mult.)
 
 ### Einstiegs-Linkobjekttyp: [Linkobjekttyp](#extension-linkobjekttyp)
 - bei Option "Hinweisobjekt" ist zusätzlich ein Hinweisobjekt zu definieren
-- Ausspielungen: [2.3](1.1-spielaufbau.html#2.3-einstiegs-linkobjekttyp); [3.2](1.1-spielaufbau.html#3.2-linkobjekttyp)
+- Ausspielungen: [2.3](1.1-spielaufbau.html#ar-session-tourbeginn); [3.2](1.1-spielaufbau.html#spielplan)
 
 ### Einstiegs-Hinweisobjekt: [CP 4: Hinweisobjekt](#cp4-hinweisobjekt)
 - anzugeben, wenn bei Einstiegs-Linkobjekttyp Option "Hinweisobjekt" eingestellt ist
-- Ausspielungen: [4.1](1.1-spielaufbau.html#4.1-media)
+- Ausspielungen: [4.1](1.1-spielaufbau.html#navigator)
 
 ### Bild für Tourauswahl: Contentful Media Asset
-- Ausspielungen: [1.1](1.1-spielaufbau.html#1.1-bild-fuer-tourauswahl); [6.1](1.1-spielaufbau.html#heading-6.1-bild-fuer-tourauswahl)
+- Ausspielungen: [1.1](1.1-spielaufbau.html#tourauswahl); [6.1](1.1-spielaufbau.html#sammelalbum)
 
 ### Text für Tourauswahl: Text
-- Ausspielungen: [1.3](1.1-spielaufbau.html#1.3-text-fuer-tourauswahl)
+- Ausspielungen: [1.3](1.1-spielaufbau.html#tourauswahl)
 
 ### Tourlänge: Zahl
 - ungefähre Angabe in Minuten
-- Ausspielungen: [1.4](1.1-spielaufbau.html#1.4-tourlaenge)
+- Ausspielungen: [1.4](1.1-spielaufbau.html#tourauswahl)
 
 ### Farbe: [Tour-Farbe](#extension-tour-farbe)
 
@@ -62,10 +62,10 @@ Hiervon sollte nur ein singulärer Eintrag als Ausgangspunkt der Datenbank exist
 ## CP2: Portal
 
 - Titel: Text
-    - Ausspielungen: [5.3](1.1-spielaufbau.html#5.3-titel); [7.2](1.1-spielaufbau.html#7.2-titel)
+    - Ausspielungen: [5.3](1.1-spielaufbau.html#ar-session-regulär); [7.2](1.1-spielaufbau.html#portalseite)
 
 - Portalspezifische Story: [Textobjekt](#textobjekt)
-    - Ausspielungen: [5.4](1.1-spielaufbau.html#5.4-portalspezifische-story); [7.3](1.1-spielaufbau.html#7.3-portalspezifische-story)
+    - Ausspielungen: [5.4](1.1-spielaufbau.html#ar-session-regulär); [7.3](1.1-spielaufbau.html#portalseite)
 
 - Standort: GPS-Location
     - Eingabe im CMS Texteingabe der Adresse kann genutzt werden, ausschlaggebend ist die Position der Nadel in der Kartendarstellung
@@ -74,41 +74,41 @@ Hiervon sollte nur ein singulärer Eintrag als Ausgangspunkt der Datenbank exist
 
 - Linkobjekttyp: [Linkobjekttyp](#extension-linkobjekttyp)
     - bei Option "Hinweisobjekt" ist zusätzlich ein Hinweisobjekt zu definieren
-    - Ausspielungen: [3.2](1.1-spielaufbau.html#3.2-linkobjekttyp); [5.9](1.1-spielaufbau.html#5.9-linkobjekttyp)
+    - Ausspielungen: [3.2](1.1-spielaufbau.html#spielplan); [5.9](1.1-spielaufbau.html#ar-session-regulär)
 
 - Hinweisobjekt: [CP 4: Hinweisobjekt](#cp4-hinweisobjekt)
     - anzugeben, wenn bei Linkobjekttyp Option "Hinweisobjekt" eingestellt ist
-    - Ausspielungen: [4.1](1.1-spielaufbau.html#4.1-media)
+    - Ausspielungen: [4.1](1.1-spielaufbau.html#navigator)
 
 - Bild für Sammelalbum: Contentful Media Asset
-    - Ausspielungen: [7.1](1.1-spielaufbau.html#7.1-bild-fuer-sammelalbum)
+    - Ausspielungen: [7.1](1.1-spielaufbau.html#portalseite)
 
 - World Maps: [Worldmap](#worldmap) (mult.)
     - Fürs Einrichten können mehrere Worldmaps eingetragen werden
     - Die jeweils oberste Worldmap wird im Spiel benutzt
 
 - Hint Text: Text
-    - Ausspielungen: [5.1](1.1-spielaufbau.html#5.1-hint-text)
+    - Ausspielungen: [5.1](1.1-spielaufbau.html#ar-session-regulär)
 
 - Hint Image: Contentful Media Asset
-    - Ausspielungen: [5.1](1.1-spielaufbau.html#5.1-hint-text)
+    - Ausspielungen: [5.2](1.1-spielaufbau.html#ar-session-regulär)
 
 
 ## CP3: Objekt
 
 - Titel: Text
-    - Ausspielungen: [5.6](1.1-spielaufbau.html#5.6-titel); [7.5](1.1-spielaufbau.html#7.5-titel)
+    - Ausspielungen: [5.6](1.1-spielaufbau.html#ar-session-regulär); [7.5](1.1-spielaufbau.html#portalseite)
 
 - Media: Contentful Media Asset (mult.)
-    - Ausspielungen: [7.4](1.1-spielaufbau.html#7.4-media)
+    - Ausspielungen: [7.4](1.1-spielaufbau.html#portalseite)
 
 - Objektspezifische Story: [Textobjekt](#textobjekt)
-    - Ausspielungen: [5.7](1.1-spielaufbau.html#5.7-objektspezifische-story); [7.6](1.1-spielaufbau.html#7.6-objektspezifische-story)
+    - Ausspielungen: [5.7](1.1-spielaufbau.html#ar-session-regulär); [7.6](1.1-spielaufbau.html#portalseite)
 
 - Stiftende Organisation: [CP5: Institution](#cp5-institution)
 
 - Zum Teilen freigegeben: [ja/nein](#extension-ja-nein)
-    - Ausspielungen: [7.7](1.1-spielaufbau.html#7.7-zum-teilen-freigegeben)
+    - Ausspielungen: [7.7](1.1-spielaufbau.html#portalseite)
 
 - Container Type: [Containertyp](#extension-containertyp)
     - muss mit Dateityp von Media korrespondieren
@@ -126,15 +126,15 @@ Das Hinweisobjekt ist ein 2D-Objekt mit Vorder- und Rückseite, das frei bewegt 
 
 - Media: Contentful Media Asset
     - vorgesehen sind zwei Bilddateien, die die Vorder- und Rückseite
-    - Ausspielungen: [4.1](1.1-spielaufbau.html#4.1-media)
+    - Ausspielungen: [4.1](1.1-spielaufbau.html#navigator)
 
 ## CP5: Institution
 
 - Titel: Text
-    - Ausspielungen: [7.8](1.1-spielaufbau.html#7.8-titel)
+    - Ausspielungen: [7.8](1.1-spielaufbau.html#portalseite)
 
 - Logo: Contentful Media Asset
-    - Ausspielungen: [7.9](1.1-spielaufbau.html#7.9-logo)
+    - Ausspielungen: [7.9](1.1-spielaufbau.html#portalseite)
 
 ## Worldmap
 
