--- a/2.1-cms-struktur.md
+++ b/2.1-cms-struktur.md
@@ -61,37 +61,37 @@ Hiervon sollte nur ein singulärer Eintrag als Ausgangspunkt der Datenbank exist
 
 ## CP2: Portal
 
-- Titel: Text
-    - Ausspielungen: [5.3](1.1-spielaufbau.html#ar-session-regulär); [7.2](1.1-spielaufbau.html#portalseite)
+### Titel: Text
+- Ausspielungen: [5.3](1.1-spielaufbau.html#ar-session-regulär); [7.2](1.1-spielaufbau.html#portalseite)
 
-- Portalspezifische Story: [Textobjekt](#textobjekt)
-    - Ausspielungen: [5.4](1.1-spielaufbau.html#ar-session-regulär); [7.3](1.1-spielaufbau.html#portalseite)
+### Portalspezifische Story: [Textobjekt](#textobjekt)
+- Ausspielungen: [5.4](1.1-spielaufbau.html#ar-session-regulär); [7.3](1.1-spielaufbau.html#portalseite)
 
-- Standort: GPS-Location
-    - Eingabe im CMS Texteingabe der Adresse kann genutzt werden, ausschlaggebend ist die Position der Nadel in der Kartendarstellung
+### Standort: GPS-Location
+- Eingabe im CMS Texteingabe der Adresse kann genutzt werden, ausschlaggebend ist die Position der Nadel in der Kartendarstellung
 
-- Objekte: [CP 3: Objekt](#cp3-objekt) (mult.)
+### Objekte: [CP 3: Objekt](#cp3-objekt) (mult.)
 
-- Linkobjekttyp: [Linkobjekttyp](#extension-linkobjekttyp)
-    - bei Option "Hinweisobjekt" ist zusätzlich ein Hinweisobjekt zu definieren
-    - Ausspielungen: [3.2](1.1-spielaufbau.html#spielplan); [5.9](1.1-spielaufbau.html#ar-session-regulär)
+### Linkobjekttyp: [Linkobjekttyp](#extension-linkobjekttyp)
+- bei Option "Hinweisobjekt" ist zusätzlich ein Hinweisobjekt zu definieren
+- Ausspielungen: [3.2](1.1-spielaufbau.html#spielplan); [5.9](1.1-spielaufbau.html#ar-session-regulär)
 
-- Hinweisobjekt: [CP 4: Hinweisobjekt](#cp4-hinweisobjekt)
-    - anzugeben, wenn bei Linkobjekttyp Option "Hinweisobjekt" eingestellt ist
-    - Ausspielungen: [4.1](1.1-spielaufbau.html#navigator)
+### Hinweisobjekt: [CP 4: Hinweisobjekt](#cp4-hinweisobjekt)
+- anzugeben, wenn bei Linkobjekttyp Option "Hinweisobjekt" eingestellt ist
+- Ausspielungen: [4.1](1.1-spielaufbau.html#navigator)
 
-- Bild für Sammelalbum: Contentful Media Asset
-    - Ausspielungen: [7.1](1.1-spielaufbau.html#portalseite)
+### Bild für Sammelalbum: Contentful Media Asset
+- Ausspielungen: [7.1](1.1-spielaufbau.html#portalseite)
 
-- World Maps: [Worldmap](#worldmap) (mult.)
-    - Fürs Einrichten können mehrere Worldmaps eingetragen werden
-    - Die jeweils oberste Worldmap wird im Spiel benutzt
+### World Maps: [Worldmap](#worldmap) (mult.)
+- Fürs Einrichten können mehrere Worldmaps eingetragen werden
+- Die jeweils oberste Worldmap wird im Spiel benutzt
 
-- Hint Text: Text
-    - Ausspielungen: [5.1](1.1-spielaufbau.html#ar-session-regulär)
+### Hint Text: Text
+- Ausspielungen: [5.1](1.1-spielaufbau.html#ar-session-regulär)
 
-- Hint Image: Contentful Media Asset
-    - Ausspielungen: [5.2](1.1-spielaufbau.html#ar-session-regulär)
+### Hint Image: Contentful Media Asset
+- Ausspielungen: [5.2](1.1-spielaufbau.html#ar-session-regulär)
 
 
 ## CP3: Objekt
