--- a/2.1-cms-struktur.md
+++ b/2.1-cms-struktur.md
@@ -38,7 +38,9 @@ Hiervon sollte nur ein singulärer Eintrag als Ausgangspunkt der Datenbank exist
 
 ### Portale: [CP 2: Portal](#cp2-portal) (mult.)
 
-### Einstiegs-Linkobjekttyp: [Linkobjekttyp](#extension-linkobjekttyp)
+### Einstiegs-Linkobjekttyp: Linkobjekttyp
+- legt den Typ des Navigationsartefakts fest, das zum ersten Portal führt
+- Optionen: Magischer Kompass, Pharus-Nadel, Hinweisobjekt
 - bei Option "Hinweisobjekt" ist zusätzlich ein Hinweisobjekt zu definieren
 - Ausspielungen: [2.3](1.1-spielaufbau.html#ar-session-tourbeginn); [3.2](1.1-spielaufbau.html#spielplan)
 
@@ -56,7 +58,9 @@ Hiervon sollte nur ein singulärer Eintrag als Ausgangspunkt der Datenbank exist
 - ungefähre Angabe in Minuten
 - Ausspielungen: [1.4](1.1-spielaufbau.html#tourauswahl)
 
-### Farbe: [Tour-Farbe](#extension-tour-farbe)
+### Farbe: Tour-Farbe
+- 6 Farb-Optionen
+- definiert Einfärbung verschiedener UI-Elemente, die sich durch die Nutzungserfahrung der Tour ziehen.
 
 
 ## CP2: Portal
@@ -72,7 +76,9 @@ Hiervon sollte nur ein singulärer Eintrag als Ausgangspunkt der Datenbank exist
 
 ### Objekte: [CP 3: Objekt](#cp3-objekt) (mult.)
 
-### Linkobjekttyp: [Linkobjekttyp](#extension-linkobjekttyp)
+### Linkobjekttyp: Linkobjekttyp
+- legt den Typ des Navigationsartefakts fest, das zum nächsten Portal führt
+- Optionen: Magischer Kompass, Pharus-Nadel, Hinweisobjekt
 - bei Option "Hinweisobjekt" ist zusätzlich ein Hinweisobjekt zu definieren
 - Ausspielungen: [3.2](1.1-spielaufbau.html#spielplan); [5.9](1.1-spielaufbau.html#ar-session-regulär)
 
@@ -96,79 +102,22 @@ Hiervon sollte nur ein singulärer Eintrag als Ausgangspunkt der Datenbank exist
 
 ## CP3: Objekt
 
-- Titel: Text
-    - Ausspielungen: [5.6](1.1-spielaufbau.html#ar-session-regulär); [7.5](1.1-spielaufbau.html#portalseite)
+### Titel: Text
+- Ausspielungen: [5.6](1.1-spielaufbau.html#ar-session-regulär); [7.5](1.1-spielaufbau.html#portalseite)
 
-- Media: Contentful Media Asset (mult.)
-    - Ausspielungen: [7.4](1.1-spielaufbau.html#portalseite)
+### Media: Contentful Media Asset (mult.)
+- Ausspielungen: [7.4](1.1-spielaufbau.html#portalseite)
 
-- Objektspezifische Story: [Textobjekt](#textobjekt)
-    - Ausspielungen: [5.7](1.1-spielaufbau.html#ar-session-regulär); [7.6](1.1-spielaufbau.html#portalseite)
+### Objektspezifische Story: [Textobjekt](#textobjekt)
+- Ausspielungen: [5.7](1.1-spielaufbau.html#ar-session-regulär); [7.6](1.1-spielaufbau.html#portalseite)
 
-- Stiftende Organisation: [CP5: Institution](#cp5-institution)
+### Stiftende Organisation: [CP5: Institution](#cp5-institution)
 
-- Zum Teilen freigegeben: [ja/nein](#extension-ja-nein)
-    - Ausspielungen: [7.7](1.1-spielaufbau.html#portalseite)
+### Zum Teilen freigegeben: [ja/nein]
+- Standard: nein
+- Ausspielungen: [7.7](1.1-spielaufbau.html#portalseite)
 
-- Container Type: [Containertyp](#extension-containertyp)
-    - muss mit Dateityp von Media korrespondieren
-
-- Long Dimension: Fließkommazahl
-    - gibt die Länge der langen Seite des darzustellenden 2D-Objekts in Metern an.
-    - anwendbar auf Containertypen "Paper" und "Film"
-
-- Fragmentation: [Fragmentzahl](#extension-fragmentzahl)
-    - anwendbar auf Containertyp "Paper"
-
-## CP4: Hinweisobjekt
-
-Das Hinweisobjekt ist ein 2D-Objekt mit Vorder- und Rückseite, das frei bewegt werden kann.
-
-- Media: Contentful Media Asset
-    - vorgesehen sind zwei Bilddateien, die die Vorder- und Rückseite
-    - Ausspielungen: [4.1](1.1-spielaufbau.html#navigator)
-
-## CP5: Institution
-
-- Titel: Text
-    - Ausspielungen: [7.8](1.1-spielaufbau.html#portalseite)
-
-- Logo: Contentful Media Asset
-    - Ausspielungen: [7.9](1.1-spielaufbau.html#portalseite)
-
-## Worldmap
-
-- Title: Text
-
-- Map File: Contentful Media Asset
-    - Ausschließlich aus der [Portal Editor Companion App](TODO:LINK) exportierte .map Dateien hier eingetragen
-    - Der nach Upload der Datei automatisch erzeugte Title-Eintrag des Contentful Media Assets (nicht des Wordmap Objekts) darf __nicht geändert__ werden
-
-
-### Textobjekt
-
-- Text: Text
-
-- Phonetisch: Text _[ungenutzt]_
-
-## Contentful Extensions
-
-### Extension Ja/Nein
-
-(Standardmäßig Nein)
-
-### Extension Linkobjekttyp
-
-- Optionen: Magischer Kompass, Pharus-Nadel, Hinweisobjekt
-- legt den Typ des Navigationsartefakts fest, das zum nächsten Portal führt
-
-### Extension Tour-Farbe
-
-- 6 Farb-Optionen
-- definiert Einfärbung verschiedener UI-Elemente, die sich durch die Nutzungserfahrung der Tour ziehen.
-
-### Extension Containertyp
-
+### Container Type: Containertyp
 - Optionen und korrespondierende Media Dateitypen:
     - Self-contained: erfordert 3D-Datei mit zusätzlicher Vorschau-Bilddatei
     - Paper: erfordert Bilddatei
@@ -179,8 +128,47 @@ Das Hinweisobjekt ist ein 2D-Objekt mit Vorder- und Rückseite, das frei bewegt 
     - Slide Projector: erfordert Bilddatei. Projektionsfläche sollte an einer physischen Wand platziert werden
     - Slide Projector with Screen: erfordert Bilddatei. Mit zusätzlicher Leinwand für Fälle, wenn keine physische Wand zur Verfügung steht
 
-### Extension Fragmentzahl
 
+### Long Dimension: Fließkommazahl
+- gibt die Länge der langen Seite des darzustellenden 2D-Objekts in Metern an.
+- anwendbar auf Containertypen "Paper" und "Film"
+
+### Fragmentation: Fragmentzahl
 - Nur wirksam in Verbindung mit Containertyp "Paper"
 - Gibt an, in wie vielen Einzelteilen das Objekt im Portal aufgefunden wird
 - Optionen: None (keine Fragmentierung), 2, 3, 4
+
+
+## CP4: Hinweisobjekt
+
+Das Hinweisobjekt ist ein 2D-Objekt mit Vorder- und Rückseite, das frei bewegt werden kann.
+
+
+### Media: Contentful Media Asset
+- vorgesehen sind zwei Bilddateien, die die Vorder- und Rückseite
+- Ausspielungen: [4.1](1.1-spielaufbau.html#navigator)
+
+
+## CP5: Institution
+
+### Titel: Text
+- Ausspielungen: [7.8](1.1-spielaufbau.html#portalseite)
+
+### Logo: Contentful Media Asset
+- Ausspielungen: [7.9](1.1-spielaufbau.html#portalseite)
+
+
+## Worldmap
+
+### Title: Text
+
+### Map File: Contentful Media Asset
+- Ausschließlich aus der [Portal Editor Companion App](TODO:LINK) exportierte .map Dateien hier eingetragen
+- Der nach Upload der Datei automatisch erzeugte Title-Eintrag des Contentful Media Assets (nicht des Wordmap Objekts) darf __nicht geändert__ werden
+
+
+## Textobjekt
+
+### Text: Text
+
+### Phonetisch: Text _[ungenutzt]_
