--- a/1.1-spielaufbau.md
+++ b/1.1-spielaufbau.md
@@ -38,7 +38,7 @@ Nach Auswahl einer Tour beginnt unmittelbar die erste AR-Session ad-hoc. Nach Du
 
 ## Spielplan
 
-Nachdem das erste Navigationsartefakt (auch Linkobjekt) eingesammelt wurde, gelangt die User*in zum Spielplan. Durch Aktivieren des Navigationsartefakts startet der Navigator.
+Nachdem das erste Navigationsartefakt (auch Linkobjekt) eingesammelt wurde, gelangt die User*in zum Spielplan, einer interaktiven Karte mit dem [Pharusplan von 1929](https://de.wikipedia.org/wiki/Datei:Pharus_Map_Berlin_1929.jpg) als Overlay. Durch Aktivieren des Navigationsartefakts startet der Navigator.
 
 ![Spielplan](/img/4_spielplan.png)
 
@@ -46,7 +46,7 @@ Nachdem das erste Navigationsartefakt (auch Linkobjekt) eingesammelt wurde, gela
     - Titel (<a name="3.1-titel">3.1</a>)
     - Linkobjekttyp (<a name="3.2-linkobjekttyp">3.2</a>)
 
-Navigationsartefakte, die später in den Portalen gefunden werden, ersetzen jeweils das aktuelle Artefakt ([3.2](#3.2-linkobjekttyp)).
+Navigationsartefakte, die später in den Portalen gefunden werden, ersetzen jeweils das aktuelle Artefakt ([3.2](#spielplan)).
 
 ## Navigator
 
