--- a/3.1-installation.md
+++ b/3.1-installation.md
@@ -7,4 +7,11 @@ nav_order: 1
 
 # Portal Editor Installation und Einrichtung
 
-Der Portal Editor ist eine separate Companion-App, das Repository befindet sich hier: [LINK]
+Der Portal Editor ist eine separate Companion-App, das Repository befindet sich [hier](https://github.com/museum4punkt0/Object-by-Object/tree/master/02%20Portal%20Editor%20App).
+
+## Eintrag des Zugangs-Tokens
+
+Die App wird mit der Content Preview API des Contentful CMS verbunden. Dazu werden __Space ID__ und __Content Preview API Access Token__ aus dem Contentful Space (Settings > API keys > Content delivery/preview tokens) kopiert und im Xcode-Projekt in der Datei `Client.swift` eingetragen:
+
+```client = Client(spaceId: "____________", accessToken: "___________________________________________")
+```
