--- a/1.2-installation.md
+++ b/1.2-installation.md
@@ -9,7 +9,7 @@ nav_order: 2
 
 ## Download
 
-Das Repository der Spiel-App befindet sich hier: [LINK]
+Das Xcode-Repository der Spiel-App befindet sich [hier](https://github.com/museum4punkt0/Object-by-Object/tree/master/01%20Object%20by%20Object%20App).
 
 ## Eintrag des Zugangs-Tokens
 
