--- a/2.3-hauptinhalte.md
+++ b/2.3-hauptinhalte.md
@@ -5,53 +5,53 @@ grand_parent: Übersicht
 nav_order: 3
 ---
 
-# Museale Hauptinhalte
+# Redaktionelle Hauptinhalte
 
-Die musealen Inhalte konstituieren sich aus Einzelobjekten, die thematisch in Geschichten zusammengefasst und innerhalb dieser Geschichten an geografischen Orten (Portalen) gruppiert sind.
+Die redaktionellen Inhalte konstituieren sich aus Einzelobjekten, die thematisch in Geschichten zusammengefasst und innerhalb dieser Geschichten an geografischen Orten (Portalen) gruppiert sind.
 
 ![Objekte](/img/content-structure-1.png)
 
-Der Hauptinhalt des [CP 3: Objekt](2.1-cms-struktur.html#cp-3-objekt) umfasst
+Der Hauptinhalt des [CP 3: Objekt](2.2-cms-struktur.html#cp-3-objekt) umfasst
 
-- Titel [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.1-cms-struktur.html#titel-text-2)
-- objektspezifische Story [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.1-cms-struktur.html#objektspezifische-story-textobjekt)
-- Mediendatei [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.1-cms-struktur.html#media-contentful-media-asset-mult)
-- stiftende Organisation [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.1-cms-struktur.html#stiftende-organisation-cp-5-institution)
-- ist das Objekt zum Teilen freigegeben?  [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.1-cms-struktur.html#zum-teilen-freigegeben-janein)
+- Titel [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#titel-text-2)
+- objektspezifische Story [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#objektspezifische-story-textobjekt)
+- Mediendatei [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#media-contentful-media-asset-mult)
+- stiftende Organisation [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#stiftende-organisation-cp-5-institution)
+- ist das Objekt zum Teilen freigegeben?  [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#zum-teilen-freigegeben-janein)
 
 ![Portale](/img/content-structure-2.png)
 
-Ein [CP 2: Portal](2.1-cms-struktur.html#cp-2-portal) fasst mehrere Objekte zusammen. Die geografische Lage ist inhaltlich relevant. Das Feld für Bemerkungen wird an die Portal Editor App ausgespielt und kann daher gut für zusätzliche Hilfsanweisungen genutzt werden, wie das Portal mit der Portal Editor App platziert werden soll.
+Ein [CP 2: Portal](2.2-cms-struktur.html#cp-2-portal) fasst mehrere Objekte zusammen. Die geografische Lage ist inhaltlich relevant. Das Feld für Bemerkungen wird an die Portal Editor App ausgespielt und kann daher gut für zusätzliche Hilfsanweisungen genutzt werden, wie das Portal mit der Portal Editor App platziert werden soll.
 
 ![Portalabfolge](/img/content-structure-3.png)
 
 Innerhalb einer Geschichte stehen die Portale in einer linearen Abfolge. Dazu enthält jedes Portal (bis auf das letzte) eine Verlinkung auf das jeweilige Folgeportal.
 
-Der Hauptinhalt des [CP 2: Portal](2.1-cms-struktur.html#cp-2-portal) umfasst
+Der Hauptinhalt des [CP 2: Portal](2.2-cms-struktur.html#cp-2-portal) umfasst
 
-- Titel [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.1-cms-struktur.html#titel-text-1)
-- portalspezifische Story [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.1-cms-struktur.html#portalspezifische-story-textobjekt)
-- geografische Lage [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.1-cms-struktur.html#standort-gps-location)
-- enthaltene Objekte [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.1-cms-struktur.html#objekte-cp-3-objekt-mult)
-- Verlinkung auf Folgeportal [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.1-cms-struktur.html#)
-- Bemerkungen [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.1-cms-struktur.html#)
+- Titel [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#titel-text-1)
+- portalspezifische Story [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#portalspezifische-story-textobjekt)
+- geografische Lage [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#standort-gps-location)
+- enthaltene Objekte [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#objekte-cp-3-objekt-mult)
+- Verlinkung auf Folgeportal [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#)
+- Bemerkungen [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#)
 
 ![Verlinkte Geschichte](/img/content-structure-4.png)
 
-Die linear erzählte [CP 1: Geschichte](2.1-cms-struktur.html#cp-1-geschichte) fasst die Portale zusammen und bietet eine Einstiegsverlinkung.
+Die linear erzählte [CP 1: Geschichte](2.2-cms-struktur.html#cp-1-geschichte) fasst die Portale zusammen und bietet eine Einstiegsverlinkung.
 
 ![Tourangebot](/img/content-structure-8.png)
 
 Im Spiel können mehrere Geschichten als Touren zur Auswahl angeboten werden. Für diese Tourauswahl bekommen die Geschichten ein Bild, einen kurzen Text und die Angabe einer ungefähren Tourlänge.
 
-Der Hauptinhalt der [CP 1: Geschichte](2.1-cms-struktur.html#cp-1-geschichte) umfasst
+Der Hauptinhalt der [CP 1: Geschichte](2.2-cms-struktur.html#cp-1-geschichte) umfasst
 
-- Titel [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.1-cms-struktur.html#titel-text)
-- Anmoderation [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.1-cms-struktur.html#anmoderation-textobjekt)
-- Abmoderation [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.1-cms-struktur.html#abmoderation-textobjekt)
-- enthaltene Portale [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.1-cms-struktur.html#portale-cp-2-portal-mult)
-- Einstiegsverlinkung [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.1-cms-struktur.html#einstiegs-linkobjekttyp-linkobjekttyp)
-- Bild für Tourauswahl [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.1-cms-struktur.html#bild-für-tourauswahl-contentful-media-asset)
-- Text für Tourauswahl [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.1-cms-struktur.html#text-für-tourauswahl-text)
-- Tourlänge [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.1-cms-struktur.html#tourlänge-zahl)
-- Tour-Farbe [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.1-cms-struktur.html#farbe-tour-farbe)
+- Titel [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#titel-text)
+- Anmoderation [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#anmoderation-textobjekt)
+- Abmoderation [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#abmoderation-textobjekt)
+- enthaltene Portale [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#portale-cp-2-portal-mult)
+- Einstiegsverlinkung [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#einstiegs-linkobjekttyp-linkobjekttyp)
+- Bild für Tourauswahl [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#bild-für-tourauswahl-contentful-media-asset)
+- Text für Tourauswahl [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#text-für-tourauswahl-text)
+- Tourlänge [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#tourlänge-zahl)
+- Tour-Farbe [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#farbe-tour-farbe)
