--- a/3.2-benutzung.md
+++ b/3.2-benutzung.md
@@ -14,7 +14,7 @@ Der Portal Editor ist eine Companion-App für Object by Object, mit der die pers
 
 Im Portal Editor findet man zuerst eine Übersicht über die bereits erstellten Touren. Dazu gibt es eine Karten- sowie eine Listenübersicht, in der alle erstellten Portale aufgelistet sind.
 
-![Kartenübersicht](/img/pe_1_karte.png) ![Listenübersicht](/img/pe_2_liste.png)
+![Kartenübersicht](/img/pe_overview_map.png) ![Listenübersicht](/img/pe_overview_list.png)
 
 
 ## Portal Details
